# controllers/usuarios.go
@@ -26,10 +26,20 @@ func Register(c *gin.Context) {
 	}
 	_, err = service.ServiceRegister(input)
 	if err != nil {
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+
+		if err.Error() == utils.Duplicate_key {
+			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+			return
+		}
+
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"message": "User registered successfully"})
+	c.JSON(http.StatusOK, gin.H{"message": "Usuario Registrado"})
 }
 
 // LoginUser godoc
@@ -65,7 +75,12 @@ func Login(c *gin.Context) {
 func GetUserById(c *gin.Context) {
 	user, err := service.ServiceGetUserByID(c.MustGet("userID").(uint))
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, user)
@@ -84,12 +99,25 @@ func GetAllUsers(c *gin.Context) {
 	user, err := service.ServiceGetAllUser()
 
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, user)
 }
 
+// RecoverPassword godoc
+// @Summary Recuperar Contraseña
+// @Description Permite recuperar la contraseña mediante la clave unica
+// @Schemes
+// @Produce application/json
+// @Tags Usuario
+// @Success 200  {object}   types.UsuariosPassword
+// @Router /api/recover [post]
 func RecuperarContrasena(c *gin.Context) {
 
 	var input types.UsuariosPassword
@@ -99,14 +127,33 @@ func RecuperarContrasena(c *gin.Context) {
 	}
 
 	usuario, err := service.ServiceRecuperarContrasena(input)
-
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+
+		if err.Error() == utils.PasswordError {
+			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
+
 	}
 	c.JSON(http.StatusOK, usuario)
 }
 
+// changePassword godoc
+// @Summary Cambiar la Contraseña
+// @Description Permite cambiar la contraseña mediante el ingreso de la clave anterior
+// @Schemes
+// @Produce application/json
+// @Tags Usuario
+// @Success 200  {object}   types.ConfirmPassword
+// @Router /api/v1/usuario/change-password [post]
+// @Security Bearer
 func CambiarContrasena(c *gin.Context) {
 	var input types.ConfirmPassword
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -115,8 +162,73 @@ func CambiarContrasena(c *gin.Context) {
 	}
 	usuario, err := service.ServiceCambiarContrasena(input)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+
+		if err.Error() == utils.PasswordError {
+			c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Ha ocurrido un error"})
 		return
 	}
 	c.JSON(http.StatusOK, usuario)
+}
+
+// updateProfile godoc
+// @Summary Cambiar los datos del perfil
+// @Description Permite cambiar los datos del perfil del usuario
+// @Schemes
+// @Produce application/json
+// @Tags Usuario
+// @Success 200  {object}   types.UpdatePerfil
+// @Router /api/v1/usuario/update-perfild [post]
+// @Security Bearer
+func UpdatePerfil(c *gin.Context) {
+	var input types.UpdatePerfil
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	usuario, err := service.ServiceUpdatePerfil(input, c.MustGet("userID").(uint))
+
+	if err != nil {
+		if err.Error() == utils.Not_found {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+			return
+		}
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, usuario)
+
+}
+
+// updateProfile godoc
+// @Summary Cambiar los datos del perfil
+// @Description Permite cambiar los datos del perfil del usuario
+// @Schemes
+// @Produce application/json
+// @Tags Usuario
+// @Success 200  {object}   types.UpdatePerfil
+// @Router /api/v1/usuario/update-perfild [post]
+// @Security Bearer
+func AsignarPuntos(c *gin.Context) {
+	var input types.AsingarPuntos
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	message, err := service.ServiceReclamarPuntos(input, c.MustGet("userID").(uint))
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, message)
+
 }
